--- a/Dash-App/Dockerfile
+++ b/Dash-App/Dockerfile
@@ -1,5 +1,5 @@
 
-ARG WATSON_RUNTIME_BASE
+ARG WATSON_RUNTIME_BASE=wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:0.9.0-ubi8_py39
 FROM ${WATSON_RUNTIME_BASE} as base
 
 # Args for artifactory credentials
