--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,11 @@ Dash-App/sentiment_document-cnn-workflow_en_stock/config.yml
 Dash-App/sentiment_document-cnn-workflow_en_stock/document_sentiment/artifact_dir/tensorflow_model.h5
 *.yml
 *.h5
+Dash-App/topic_models/complaint_topic_model_bankof
+Dash-App/topic_models/complaint_topic_model_bankof
+Dash-App/topic_models/complaint_topic_model_bankof
+Dash-App/topic_models/complaint_topic_model_capital
+Dash-App/topic_models/complaint_topic_model_citi
+*.model
+*.json
+*.json
