--- a/Dash-App-GRPC/deployment/config.yaml
+++ b/Dash-App-GRPC/deployment/config.yaml
@@ -4,6 +4,7 @@ data:
   GRPC_SERVER_URL: wml-serving:8033
   SENTIMENT_DOCUMENT_CNN_WORKFLOW_MODEL: sentiment-document-cnn-workflow-en-stock-predictor
   SYNTAX_IZUMO_EN_STOCK_MODEL: syntax-izumo-en-stock-predictor
+  NLP_MODEL_SERVICE_TYPE: mm-vmodel-id
 kind: ConfigMap
 metadata:
   name: dahsapp-config
