Adding Hotel Reviews classification

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ Dash-App/topic_models/complaint_topic_model_citi
 *.model
 *.json
 *.json
+*.pb
+Dash-App/ensemble_classification-wf_en_emotion-stock/stopwords/artifacts/stopwords.txt
+*.pkl
+*.data-00000-of-00001
+*.index
