--- a/STTApplication/src/main/resources/application.properties
+++ b/STTApplication/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 
 feign.httpclient.enabled=true
-feign.client.config.default.connect-timeout=5000
-feign.client.config.default.read-timeout=5000
+feign.client.config.default.connect-timeout=50000
+feign.client.config.default.read-timeout=50000
 feign.client.config.default.logger-level=BASIC
 client.post.baseurl=${STT_SERVICE_ENDPOINT}
+
+# Web properties
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Server properties
+server.tomcat.max-http-form-post-size=100000000
+server.tomcat.max-swallow-size=100000000
