changed look and feel based on feedback

--- a/STTApplication/src/main/resources/application.properties
+++ b/STTApplication/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.servlet.multipart.max-request-size=10MB
 # Server properties
 server.tomcat.max-http-form-post-size=100000000
 server.tomcat.max-swallow-size=100000000
+spring.mvc.async.request-timeout=6000
