--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Dash-App/ensemble_classification-wf_en_emotion-stock/stopwords/artifacts/stopwor
 *.pkl
 *.data-00000-of-00001
 *.index
+Dash-App/svm_model_hotel_reviews_classification
+Dash-App/ensemble_model_hotel_reviews_classification
