--- a/Watson-NLP-Container/Runtime/Dockerfile
+++ b/Watson-NLP-Container/Runtime/Dockerfile
@@ -15,8 +15,8 @@ FROM base as build
 # Args for artifactory credentials
 ARG ARTIFACTORY_USERNAME
 ARG ARTIFACTORY_API_KEY
-ENV ARTIFACTORY_USERNAME="htalukder@ibm.com"
-ENV ARTIFACTORY_API_KEY="AKCp8mZT1FkPZ3jFLgdCyvU7GrDtBQraK4d5Sg6pWzqHY41MmPnQw74ixqb6rHAMmAdp9mzGm"
+ENV ARTIFACTORY_USERNAME=${ARTIFACTORY_USERNAME}
+ENV ARTIFACTORY_API_KEY=${ARTIFACTORY_API_KEY}
 
 # Build arg to specify space-delimited names of models
 ARG MODEL_NAMES
