--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ Dash-App/noun-phrases_rbr_en_stock/artifacts/watson-nlp-npchunker-aql-0.0.19-ext
 Dash-App/models/bert_wkflow_imdb_5_epochs
 Dash-App/hotel-reviews/london_hotel_reviews.csv
 Dash-App/models/bert_wkflow_imdb_5_epochs
+Topic-Modeling/Topic Modeling Visualizations.ipynb
