--- a/Watson-NLP-Container-k8/Runtime/Dockerfile
+++ b/Watson-NLP-Container-k8/Runtime/Dockerfile
@@ -5,35 +5,21 @@
 # divested of its trade secrets, irrespective of what has been    #
 # deposited with the U.S. Copyright Office.                       #
 #*****************************************************************#
-ARG WATSON_RUNTIME_BASE="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:0.13.1_ubi8_py39"
-FROM ${WATSON_RUNTIME_BASE} as base
-#################
-## Build Phase ##
-#################
-FROM base as build
+ARG WATSON_RUNTIME_BASE="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:0.20.0"
+ARG SENTIMENT_MODEL="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp_sentiment_aggregated-cnn-workflow_lang_en_stock:2.8.0"
+ARG EMOTION_MODEL="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp_classification_ensemble-workflow_lang_en_tone-stock:2.3.1"
 
-# Args for artifactory credentials
-ARG ARTIFACTORY_USERNAME
-ARG ARTIFACTORY_API_KEY
-ENV ARTIFACTORY_USERNAME=${ARTIFACTORY_USERNAME}
-ENV ARTIFACTORY_API_KEY=${ARTIFACTORY_API_KEY}
+FROM ${SENTIMENT_MODEL} as model1
+RUN ./unpack_model.sh
 
-# Build arg to specify space-delimited names of models
-ARG MODEL_NAMES
-WORKDIR /app/models
-# Download all of the models locally to /app/models
+FROM ${EMOTION_MODEL} as model2
+RUN ./unpack_model.sh
+
+FROM ${WATSON_RUNTIME_BASE} as release
+
 RUN true && \
-    mkdir -p /app/models && \
-    arr=(${MODEL_NAMES}) && \
-    for model_name in "${arr[@]}"; do \
-        python3 -c "import watson_nlp; watson_nlp.download('${model_name}', parent_dir='/app/models')"; \
-    done && \
-    true
-
-###################
-## Release Phase ##
-###################
-FROM base as release
+    mkdir -p /app/models
 
 ENV LOCAL_MODELS_DIR=/app/models
-COPY --from=build /app/models /app/models
+COPY --from=model1 app/models /app/models
+COPY --from=model2 app/models /app/models
