Removing project token from entities notebook

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ Dash-App/models/bert_wkflow_imdb_5_epochs
 Dash-App/hotel-reviews/london_hotel_reviews.csv
 Dash-App/models/bert_wkflow_imdb_5_epochs
 Topic-Modeling/Topic Modeling Visualizations.ipynb
+Dash-App/models/svm_model_complaints_classification.zip
