--- a/MLOps/Watson-NLP-Custom-Model-Container/Runtime/Dockerfile
+++ b/MLOps/Watson-NLP-Custom-Model-Container/Runtime/Dockerfile
@@ -5,7 +5,7 @@
 # divested of its trade secrets, irrespective of what has been    #
 # deposited with the U.S. Copyright Office.                       #
 #*****************************************************************#
-ARG WATSON_RUNTIME_BASE="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:0.13.1_ubi8_py39"
+ARG WATSON_RUNTIME_BASE="wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:1.0.0"
 FROM ${WATSON_RUNTIME_BASE} as base
 ENV LOCAL_MODELS_DIR=/app/models
 COPY models /app/models
