--- a/MLOps/Watson-NLP-Container-k8/Runtime/deployment/deployment.yaml
+++ b/MLOps/Watson-NLP-Container-k8/Runtime/deployment/deployment.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: watson-nlp-container
         image: image-registry.openshift-image-registry.svc:5000/openshift/watson-nlp-container:v1
+        env:
+          - name: ACCEPT_LICENSE
+            value: true
         ports:
         - containerPort: 8085
       serviceAccount: watson-nlp-sa
