--- a/MLOps/Dash-App-GRPC/deployment/deployment.yaml
+++ b/MLOps/Dash-App-GRPC/deployment/deployment.yaml
@@ -16,30 +16,30 @@ spec:
       - name: dash-app-grpc
         image: image-registry.openshift-image-registry.svc:5000/openshift/dash-app-grpc:2022083111
         env:
-          - name: EMOTION_CLASSIFICATION_STOCK_MODEL
+          - name: TONE_CLASSIFICATION_STOCK_MODEL
             valueFrom:
               configMapKeyRef:
-                key: EMOTION_CLASSIFICATION_STOCK_MODEL
-                name: dahsapp-config
+                key: TONE_CLASSIFICATION_STOCK_MODEL
+                name: dashapp-config
           - name: GRPC_SERVER_URL
             valueFrom:
               configMapKeyRef:
                 key: GRPC_SERVER_URL
-                name: dahsapp-config
+                name: dashapp-config
           - name: SENTIMENT_DOCUMENT_CNN_WORKFLOW_MODEL
             valueFrom:
               configMapKeyRef:
                 key: SENTIMENT_DOCUMENT_CNN_WORKFLOW_MODEL
-                name: dahsapp-config
+                name: dashapp-config
           - name: SYNTAX_IZUMO_EN_STOCK_MODEL
             valueFrom:
               configMapKeyRef:
                 key: SYNTAX_IZUMO_EN_STOCK_MODEL
-                name: dahsapp-config
+                name: dashapp-config
           - name: NLP_MODEL_SERVICE_TYPE
             valueFrom:
               configMapKeyRef:
                 key: NLP_MODEL_SERVICE_TYPE
-                name: dahsapp-config
+                name: dashapp-config
         ports:
         - containerPort: 8050
