remove unused artifacts
Signed-off-by: Tim Robinson <timroster@gmail.com>

--- a/MLOps/Dash-App-GRPC/Dockerfile
+++ b/MLOps/Dash-App-GRPC/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM registry.access.redhat.com/ubi8/python-39:1-73
 
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
@@ -6,8 +6,8 @@ RUN pip3 install -r requirements.txt
 
 ARG SERVICE_PORT=8050
 ENV GRPC_SERVER_URL="localhost:8085" \
-    TONE_CLASSIFICATION_STOCK_MODEL="ensemble-classification-wf-en-emotion-stock-predictor" \
-    NLP_MODEL_SERVICE_TYPE="mm-vmodel-id" \
+    TONE_CLASSIFICATION_STOCK_MODEL="classification_ensemble-workflow_lang_en_tone-stock" \
+    NLP_MODEL_SERVICE_TYPE="mm-model-id" \
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python \
     SERVICE_PORT=${SERVICE_PORT}
 
