--- a/ML/Dash-App/Dockerfile.entity_extraction
+++ b/ML/Dash-App/Dockerfile.entity_extraction
@@ -1,28 +1,15 @@
-ARG WATSON_RUNTIME_BASE=wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:0.13.1_ubi8_py39
+ARG WATSON_RUNTIME_BASE=wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:1.0.0
 FROM ${WATSON_RUNTIME_BASE} as base
 
 # Args for artifactory credentials
-ARG ARTIFACTORY_USERNAME
-ARG ARTIFACTORY_API_KEY
 ARG SERVICE_PORT=8050
 
-ENV ARTIFACTORY_USERNAME ${ARTIFACTORY_USERNAME}
-ENV ARTIFACTORY_API_KEY ${ARTIFACTORY_API_KEY}
+ENV ACCEPT_LICENSE true
 ENV SERVICE_PORT ${SERVICE_PORT}
 EXPOSE ${SERVICE_PORT}
 
 # Setting up the working directory
 WORKDIR /app
-
-ARG MODEL_NAMES="sentiment_document-cnn_en_stock syntax_izumo_en_stock ensemble_classification-wf_en_emotion-stock"
-# Download all of the models locally to /app/models
-RUN true && \
-    mkdir -p /app/models && \
-    arr=(${MODEL_NAMES}) && \
-    for model_name in "${arr[@]}"; do \
-        python3 -c "import watson_nlp; watson_nlp.download('${model_name}', parent_dir='/app')"; \
-    done && \
-    true
 
 # Installing the required python library to run models
 COPY requirements.txt /app/requirements.txt
@@ -34,6 +21,7 @@ RUN chown -R appuser:appuser /app
 USER appuser
 
 COPY hotel-reviews /app/hotel-reviews
+COPY models/entity /app/
 COPY assets /app/assets
 COPY Entity_extraction_dash_app.py /app/Entity_extraction_dash_app.py
 ENTRYPOINT ["python3","Entity_extraction_dash_app.py"]
