Updating Getting Started tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,11 @@ Screenshots/ML-Assets-Coverage-Map.xmind
 ML/Dash-App/hotel-reviews/london_hotel_reviews.csv
 Screenshots/Watson-Core-Libraries.xmind
 Screenshots/MLOps-Assets-Coverage-Map.xmind
+Dash-App/models/ensemble_model (1)
+Dash-App/models/ensemble_model/stopwords/artifacts/stopwords.txt
+ML/Dash-App/complaints_downsampled.csv
+ML/Dash-App/data/complaints.csv
+ML/Dash-App/data/complaints.csv.zip
+ML/Dash-App/data/complaints_downsampled.csv
+ML/Dash-App/data/complaints_only.csv
+ML/Dash-App/pip.conf
