--- a/MLOps/Init-Container/deployment/deployment.yaml
+++ b/MLOps/Init-Container/deployment/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       initContainers:
       - name: ensemble-workflow-lang-en-tone-stock
-        image: wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp_classification_ensemble-workflow_lang_en_tone-stock:1.0.3
+        image: cp.icr.io/cp/ai/watson-nlp_classification_ensemble-workflow_lang_en_tone-stock:1.0.6
         volumeMounts:
         - name: model-directory
           mountPath: "/app/models"
@@ -23,7 +23,7 @@ spec:
           value: 'true'
       containers:
       - name: watson-nlp-runtime
-        image: wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:1.0.0
+        image: cp.icr.io/cp/ai/watson-nlp-runtime:1.0.18
         env:
         - name: ACCEPT_LICENSE
           value: 'true'
