--- a/MLOps/custom-model-k8s/deployment/deployment.yaml
+++ b/MLOps/custom-model-k8s/deployment/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           value: 'true'
       containers:
       - name: watson-nlp-runtime
-        image: wcp-ai-foundation-team-docker-virtual.artifactory.swg-devops.com/watson-nlp-runtime:1.0.0
+        image: cp.icr.io/cp/ai/watson-nlp-runtime:1.0.18
         env:
         - name: ACCEPT_LICENSE
           value: 'true'
