--- a/MLOps/Init-Container/deployment/deployment.yaml
+++ b/MLOps/Init-Container/deployment/deployment.yaml
@@ -11,10 +11,27 @@ spec:
     metadata:
       labels:
         app: watson-nlp-runtime
+      annotations:
+        alpha.image.policy.openshift.io/resolve-names: '*'
     spec:
       initContainers:
-      - name: ensemble-workflow-lang-en-tone-stock
-        image: cp.icr.io/cp/ai/watson-nlp_classification_ensemble-workflow_lang_en_tone-stock:1.0.6
+      - name: emotion-aggregated-workflow-lang-en-stock
+        image: cp.icr.io/cp/ai/watson-nlp_emotion_aggregated-workflow_lang_en_stock:1.0.9
+        volumeMounts:
+        - name: model-directory
+          mountPath: "/app/models"
+        env:
+        - name: ACCEPT_LICENSE
+          value: 'true'
+        resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
+          limits:
+            memory: "200Mi"
+            cpu: "200m"
+      - name: model-tfidf-emo-classification
+        image: watson-nlp_model_tfidf_emo_classification
         volumeMounts:
         - name: model-directory
           mountPath: "/app/models"
@@ -30,7 +47,7 @@ spec:
             cpu: "200m"
       containers:
       - name: watson-nlp-runtime
-        image: cp.icr.io/cp/ai/watson-nlp-runtime:1.0.18
+        image: cp.icr.io/cp/ai/watson-nlp-runtime:1.1.0
         env:
         - name: ACCEPT_LICENSE
           value: 'true'
@@ -40,22 +57,23 @@ spec:
           value: debug
         resources:
           requests:
-            memory: "1Gi"
-            cpu: "500m"
+            memory: "2Gi"
+            cpu: "1"
+            ephemeral-storage: "4Gi"
           limits:
-            memory: "4Gi"
-            cpu: "2"
+            memory: "8Gi"
+            cpu: "4"
+            ephemeral-storage: "4Gi"
         ports:
         - containerPort: 8080
         - containerPort: 8085
         volumeMounts:
         - name: model-directory
           mountPath: "/app/models"
-      imagePullSecrets:
-      - name: watson-nlp
       volumes:
       - name: model-directory
-        emptyDir: {}
+        emptyDir:
+          sizeLimit: 4Gi
 ---
 apiVersion: v1
 kind: Service
