--- a/MLOps/Init-Container/deployment/deployment.yaml
+++ b/MLOps/Init-Container/deployment/deployment.yaml
@@ -7,6 +7,8 @@ spec:
     matchLabels:
       app: watson-nlp-runtime
   replicas: 1
+  strategy: 
+    type: Recreate
   template:
     metadata:
       labels:
