added config to knative service for queue-proxy resource limits

--- a/MLOps/Watson-NLP-Knative/deployment/knative-service.yaml
+++ b/MLOps/Watson-NLP-Knative/deployment/knative-service.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   template:
     metadata:
+      annotations:
+        queue.sidecar.serving.knative.dev/resourcePercentage: "10"
     spec:
       initContainers:
       - name: ensemble-workflow-lang-en-tone-stock
